--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -11,7 +10,7 @@
       background-color: #f9f9f9;
       color: #222;
       text-align: center;
-      padding: 50px 20px;
+      padding: 40px 20px;
     }
     h1 {
       font-size: 28px;
@@ -19,49 +18,80 @@
     }
     p {
       font-size: 18px;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
+    }
+    .video-container {
+      position: relative;
+      width: 100%;
+      max-width: 720px;
+      margin: 0 auto 20px auto;
+    }
+    iframe {
+      width: 100%;
+      height: 400px;
+      border-radius: 10px;
     }
     .cta-button {
       background-color: #ffcc00;
       color: #000;
-      padding: 15px 30px;
-      font-size: 18px;
+      padding: 12px 24px;
+      font-size: 16px;
       border: none;
-      border-radius: 8px;
+      border-radius: 6px;
       font-weight: bold;
       cursor: pointer;
-      transition: 0.3s;
+      margin: 5px;
     }
     .cta-button:hover {
       background-color: #e6b800;
     }
-    .emoji {
-      font-size: 22px;
-      margin-left: 6px;
-    }
     .footer {
-      margin-top: 40px;
+      margin-top: 30px;
       font-size: 14px;
       color: #888;
+    }
+    #viewCounter {
+      margin-top: 15px;
+      font-size: 16px;
+      color: #555;
     }
   </style>
 </head>
 <body>
   <h1>🎬 فيلم العاشرة</h1>
   <p>كل مشاهدة... كل مشاركة... تكتب بداية جديدة لنجاح سعودي مستقل.</p>
-  <button class="cta-button" onclick="openLinks()">شاهد وشارك وادعم <span class="emoji">😉</span></button>
 
-  <script>
-    function openLinks() {
-      window.open("https://youtu.be/IBjZo947sJ4", "_blank");
-      setTimeout(() => {
-        window.open("https://www.facebook.com/sharer/sharer.php?u=https://youtu.be/IBjZo947sJ4", "_blank");
-      }, 1000);
-    }
-  </script>
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/oa9dihhaUFs" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <button class="cta-button" onclick="shareFB()">مشاركة على فيسبوك</button>
+  <button class="cta-button" onclick="likeFB()">إعجاب</button>
+
+  <div id="viewCounter">عدد الزيارات: <span id="counter">0</span></div>
 
   <div class="footer">
     مشروع 10X Impact – دعمك يفتح أبواب الحكاية 🎥
   </div>
+
+  <script>
+    // مشاركة فيسبوك
+    function shareFB() {
+      window.open("https://www.facebook.com/sharer/sharer.php?u=https://youtu.be/oa9dihhaUFs", "_blank");
+    }
+
+    // زر إعجاب وهمي
+    function likeFB() {
+      alert("❤️ تم تسجيل إعجابك بالفيلم! شكراً لدعمك");
+    }
+
+    // عداد مشاهدات محلية باستخدام LocalStorage
+    window.onload = function () {
+      let views = localStorage.getItem("visit_count") || 0;
+      views++;
+      localStorage.setItem("visit_count", views);
+      document.getElementById("counter").innerText = views;
+    }
+  </script>
 </body>
 </html>
