--- a/index.html
+++ b/index.html
@@ -2,75 +2,89 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>🎬 العاشرة | فيلم قصير</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>فيلم العاشرة</title>
   <style>
     body {
-      font-family: 'Cairo', sans-serif;
-      background-color: #fdfdfd;
-      color: #222;
+      background: url('https://i.imgur.com/7oXItCJ.jpg') no-repeat center center fixed;
+      background-size: cover;
+      font-family: 'Tajawal', sans-serif;
+      color: #fff;
       text-align: center;
       padding: 20px;
     }
-    iframe {
-      width: 90%;
-      height: 400px;
-      max-width: 700px;
-      border-radius: 12px;
-      border: 3px solid black;
-      margin-bottom: 30px;
+
+    h1 {
+      font-size: 36px;
+      color: #ff0000;
+      text-shadow: 2px 2px 4px #000;
     }
-    .button {
-      display: inline-block;
+
+    .video-wrapper {
+      max-width: 700px;
+      margin: 20px auto;
+      box-shadow: 0 0 30px rgba(255, 0, 0, 0.4);
+    }
+
+    .btn {
+      background-color: #fcd200;
+      color: #000;
+      font-weight: bold;
+      padding: 12px 20px;
       margin: 10px;
-      padding: 12px 24px;
       border: none;
       border-radius: 8px;
-      font-size: 16px;
-      font-weight: bold;
       cursor: pointer;
-      background-color: #ffcc00;
-      transition: 0.2s;
-    }
-    .button:hover {
-      background-color: #e6b800;
-    }
-    #counter {
-      margin-top: 20px;
-      font-weight: bold;
       font-size: 16px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.4);
+      transition: 0.3s;
+    }
+
+    .btn:hover {
+      background-color: #ff0000;
+      color: #fff;
+    }
+
+    .footer {
+      margin-top: 40px;
+      font-size: 18px;
+      font-weight: bold;
+      color: #aaa;
     }
   </style>
 </head>
 <body>
 
-  <h1>🎬 فيلم العاشرة</h1>
-  <iframe src="https://www.youtube.com/embed/oa9dihhaUFs" frameborder="0" allowfullscreen></iframe>
+  <h1>🎬 فيلم الرعب: العاشرة</h1>
 
-  <div>
-    <button class="button" onclick="shareOnFacebook()">📘 مشاركة على فيسبوك</button>
-    <button class="button" onclick="alert('أعجبك الفيلم؟ شكراً لدعمك!')">❤️ إعجاب رمزي!</button>
-    <button class="button" onclick="alert('شارك الفيلم مع أصدقائك ✨')">📣 غرد عن الفيلم</button>
+  <div class="video-wrapper">
+    <iframe width="100%" height="400" src="https://www.youtube.com/embed/oa9dihhaUFs" frameborder="0" allowfullscreen></iframe>
   </div>
 
-  <div id="counter"></div>
+  <button class="btn" onclick="shareFacebook()">👻 شارك الرعب على فيسبوك</button>
+  <button class="btn" onclick="likeFilm()">❤️ أعجبني رغم الرعب</button>
+  <button class="btn" onclick="alert('🧛‍♂️ انشر الفيلم!')">🩸 غرّد عن الفيلم</button>
+
+  <div class="footer">عدد الزوار: <span id="counter">0</span> 👀</div>
+
+  <div class="footer">عاصم يحب اليتا 🖤</div>
 
   <script>
-    window.onload = function () {
-      let visits = localStorage.getItem("tenth_visits");
-      if (!visits) {
-        visits = 1;
-      } else {
-        visits = parseInt(visits) + 1;
-      }
-      localStorage.setItem("tenth_visits", visits);
-      document.getElementById("counter").innerText = "عدد الزيارات: " + visits;
-    };
-
-    function shareOnFacebook() {
-      let postText = encodeURIComponent("شاهد فيلم العاشرة 🎬 يعطيك إحساس مختلف \n#العاشرة\nhttps://youtu.be/oa9dihhaUFs");
-      window.open(`https://www.facebook.com/sharer/sharer.php?u=https://youtu.be/oa9dihhaUFs&quote=${postText}`);
+    function shareFacebook() {
+      const text = encodeURIComponent('شاهد فيلم العاشرة 🎥 فيلم يعطيك إحساس مختلف! #العاشرة');
+      const url = encodeURIComponent('https://youtu.be/oa9dihhaUFs');
+      const fbUrl = `https://www.facebook.com/sharer/sharer.php?u=${url}&quote=${text}`;
+      window.open(fbUrl, '_blank');
     }
-  </script>
 
+    function likeFilm() {
+      alert('❤️ تم تسجيل إعجابك بالفيلم!');
+    }
+
+    let count = localStorage.getItem("visitCount") || 0;
+    count++;
+    localStorage.setItem("visitCount", count);
+    document.getElementById("counter").innerText = count;
+  </script>
 </body>
 </html>
