--- a/index.html
+++ b/index.html
@@ -3,27 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>فيلم العاشرة</title>
+  <title>THETENTH – فيلم العاشرة</title>
+  <meta property="og:title" content="THETENTH – مو كل اللي جنبك بشر" />
+  <meta property="og:description" content="فيلم رعب سعودي قصير يجعلك تعيد التفكير… شاهد الآن." />
+  <meta property="og:image" content="https://asemalmoshr3.github.io/THETENTH/og.jpg" />
+  <meta property="og:type" content="website" />
   <style>
     body {
-      background: url('https://i.imgur.com/7oXItCJ.jpg') no-repeat center center fixed;
-      background-size: cover;
-      font-family: 'Tajawal', sans-serif;
+      margin: 0;
+      font-family: 'Cairo', sans-serif;
       color: #fff;
       text-align: center;
-      padding: 20px;
+      background: url('https://i.imgur.com/N9ZsrOY.gif') no-repeat center center fixed;
+      background-size: cover;
+      animation: flickerBg 10s infinite ease-in-out;
+    }
+
+    @keyframes flickerBg {
+      0%, 100% { filter: brightness(100%); }
+      50% { filter: brightness(70%); }
     }
 
     h1 {
       font-size: 36px;
       color: #ff0000;
-      text-shadow: 2px 2px 4px #000;
+      text-shadow: 2px 2px 6px black;
+      margin-top: 40px;
     }
 
     .video-wrapper {
       max-width: 700px;
-      margin: 20px auto;
+      margin: 30px auto;
       box-shadow: 0 0 30px rgba(255, 0, 0, 0.4);
+      border-radius: 10px;
+      overflow: hidden;
     }
 
     .btn {
@@ -43,6 +56,7 @@
     .btn:hover {
       background-color: #ff0000;
       color: #fff;
+      transform: scale(1.05);
     }
 
     .footer {
@@ -55,7 +69,7 @@
 </head>
 <body>
 
-  <h1>🎬 فيلم الرعب: العاشرة</h1>
+  <h1>🎬 فيلم الرعب: THETENTH</h1>
 
   <div class="video-wrapper">
     <iframe width="100%" height="400" src="https://www.youtube.com/embed/oa9dihhaUFs" frameborder="0" allowfullscreen></iframe>
@@ -66,7 +80,6 @@
   <button class="btn" onclick="alert('🧛‍♂️ انشر الفيلم!')">🩸 غرّد عن الفيلم</button>
 
   <div class="footer">عدد الزوار: <span id="counter">0</span> 👀</div>
-
   <div class="footer">عاصم يحب اليتا 🖤</div>
 
   <script>
