--- a/index.html
+++ b/index.html
@@ -14,14 +14,25 @@
       font-family: 'Cairo', sans-serif;
       color: #fff;
       text-align: center;
-      background: url('https://i.imgur.com/N9ZsrOY.gif') no-repeat center center fixed;
+      background: #000 url('https://i.imgur.com/N9ZsrOY.jpg') no-repeat center center fixed;
       background-size: cover;
-      animation: flickerBg 10s infinite ease-in-out;
     }
 
-    @keyframes flickerBg {
-      0%, 100% { filter: brightness(100%); }
-      50% { filter: brightness(70%); }
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.4);
+      animation: flashEffect 4s infinite;
+      z-index: -1;
+    }
+
+    @keyframes flashEffect {
+      0%, 100% { opacity: 0.4; }
+      50% { opacity: 0.15; }
     }
 
     h1 {
