--- a/index.html
+++ b/index.html
@@ -2,67 +2,81 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>THETENTH | فيلم الرعب</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="فيلم الرعب: THE TENTH">
+  <meta property="og:image" content="https://raw.githubusercontent.com/asemAlmoshr3/THETENTH/main/assets/cover.jpg">
+  <meta property="og:description" content="شاهد فيلم الرعب السعودي العاشرة... مو كل اللي جنبك بشر 👹">
+  <title>فيلم THE TENTH</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap');
+    * {
+      font-family: 'Cairo', sans-serif;
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
-      font-family: 'Cairo', sans-serif;
-      background: url('https://cdn.pixabay.com/animation/2022/10/18/13/35/13-35-00-105_512.gif') no-repeat center center fixed;
+      padding: 0;
+      background: url('https://i.imgur.com/3nNczQT.gif') no-repeat center center fixed;
       background-size: cover;
       color: white;
       text-align: center;
     }
     h1 {
-      font-size: 2.5em;
-      margin-top: 20px;
       color: red;
-      text-shadow: 0 0 10px black;
+      text-shadow: 2px 2px 5px black;
+    }
+    .video-container {
+      margin-top: 30px;
+      box-shadow: 0 0 30px #000000aa;
+      display: inline-block;
     }
     .buttons {
-      margin-top: 20px;
+      margin: 20px;
     }
-    button {
-      background: gold;
-      color: black;
+    .btn {
+      background-color: #ffcc00;
       border: none;
+      color: black;
       padding: 10px 20px;
-      margin: 5px;
-      border-radius: 8px;
-      font-size: 16px;
+      margin: 10px;
+      font-size: 18px;
       cursor: pointer;
-      box-shadow: 0 0 5px #000;
+      border-radius: 6px;
+      box-shadow: 2px 2px 8px black;
+      transition: transform 0.2s ease, background 0.3s ease;
     }
-    iframe {
-      margin-top: 20px;
-      box-shadow: 0 0 20px black;
-      border-radius: 8px;
+    .btn:hover {
+      transform: scale(1.05);
+      background-color: #ffaa00;
     }
     .footer {
-      margin-top: 30px;
-      font-size: 14px;
-      color: #ccc;
-      text-shadow: 0 0 5px black;
+      margin-top: 20px;
+      font-size: 16px;
+      color: #ddd;
     }
   </style>
 </head>
 <body>
-  <h1>🎬 فيلم الرعب: <span style="color:red">THETENTH</span></h1>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/oa9dihhaUFs" frameborder="0" allowfullscreen></iframe>
+  <h1>🎬 فيلم الرعب: <span style="color: #ff0000">THETENTH</span></h1>
+  <div class="video-container">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/oa9dihhaUFs" frameborder="0" allowfullscreen></iframe>
+  </div>
   <div class="buttons">
-    <button onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://www.youtube.com/watch?v=oa9dihhaUFs', '_blank')">👻 شارك الرعب على فيسبوك</button>
-    <button onclick="alert('😱 أعجبني رغم الرعب!')">❤️ أعجبني رغم الرعب</button>
-    <button onclick="alert('🎬 غمّز عن الفيلم!')">🩸 غمّز عن الفيلم</button>
+    <button class="btn" onclick="shareOnFacebook()">👻 شارك الرعب على فيسبوك</button>
+    <button class="btn" onclick="alert('🔥 شكراً على الإعجاب!')">❤️ أعجبني رغم الرعب</button>
+    <button class="btn" onclick="alert('🔪 دمّرتنا!')">🩸 عطني عن الفيلم</button>
   </div>
   <div class="footer">
-    👁️‍🗨️ عدد الزوار: <span id="visits">0</span><br>
-    ❤️ عاصم يحب أليتا
+    👁️‍🗨️ عدد الزوار: <span id="counter">95</span><br>
+    🖤 عاصم يحب اليتا
   </div>
 
   <script>
-    let visits = localStorage.getItem('visits') || 0;
-    visits++;
-    localStorage.setItem('visits', visits);
-    document.getElementById('visits').innerText = visits;
+    function shareOnFacebook() {
+      const url = encodeURIComponent("https://asemalmoshr3.github.io/THETENTH/");
+      const text = encodeURIComponent("شاهد فيلم العاشرة 🧠 فيلم يعطيك إحساس مختلف #العاشرة");
+      window.open(`https://www.facebook.com/sharer/sharer.php?u=${url}&quote=${text}`, '_blank');
+    }
   </script>
 </body>
 </html>
