--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </div>
   <div class="footer">
     👁️‍🗨️ عدد الزوار: <span id="counter">95</span><br>
-    🖤 عاصم يحب اليتا
+    🖤 شارك لا يوقف عندك   
   </div>
 
   <script>
