--- a/index.html
+++ b/index.html
@@ -4,57 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="فيلم الرعب: THE TENTH">
-  <meta property="og:image" content="https://raw.githubusercontent.com/asemAlmoshr3/THETENTH/main/assets/cover.jpg">
+  <meta property="og:image" content="https://raw.githubusercontent.com/asemAlmoshr3/THETENTH/main/assets/halloween-6880.gif">
   <meta property="og:description" content="شاهد فيلم الرعب السعودي العاشرة... مو كل اللي جنبك بشر 👹">
   <title>فيلم THE TENTH</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap');
-    * {
-      font-family: 'Cairo', sans-serif;
-      box-sizing: border-box;
-    }
-    body {
-      margin: 0;
-      padding: 0;
-      background: url('https://i.imgur.com/3nNczQT.gif') no-repeat center center fixed;
-      background-size: cover;
-      color: white;
-      text-align: center;
-    }
-    h1 {
-      color: red;
-      text-shadow: 2px 2px 5px black;
-    }
-    .video-container {
-      margin-top: 30px;
-      box-shadow: 0 0 30px #000000aa;
-      display: inline-block;
-    }
-    .buttons {
-      margin: 20px;
-    }
-    .btn {
-      background-color: #ffcc00;
-      border: none;
-      color: black;
-      padding: 10px 20px;
-      margin: 10px;
-      font-size: 18px;
-      cursor: pointer;
-      border-radius: 6px;
-      box-shadow: 2px 2px 8px black;
-      transition: transform 0.2s ease, background 0.3s ease;
-    }
-    .btn:hover {
-      transform: scale(1.05);
-      background-color: #ffaa00;
-    }
-    .footer {
-      margin-top: 20px;
-      font-size: 16px;
-      color: #ddd;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>🎬 فيلم الرعب: <span style="color: #ff0000">THETENTH</span></h1>
@@ -68,7 +21,7 @@
   </div>
   <div class="footer">
     👁️‍🗨️ عدد الزوار: <span id="counter">95</span><br>
-    🖤 شارك لا يوقف عندك   
+    🖤 عاصم يحب اليتا
   </div>
 
   <script>
