--- a/index.html
+++ b/index.html
@@ -1,53 +1,37 @@
+
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>فيلم الرعب: THETENTH</title>
+  <title>THE TENTH</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1 class="title">🎬 فيلم الرعب: <span>THETENTH</span></h1>
+  <h1>📽️ فيلم الرعب: <span style="color:red">THETENTH</span></h1>
   <div class="video-container">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/oa9dihhaUFs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/oa9dihhaUFs" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
   </div>
   <div class="buttons">
     <button onclick="shareOnFacebook()">👻 شارك الرعب على فيسبوك</button>
-    <button onclick="shareOnX()">👹 شارك على X (تويتر سابقًا)</button>
-    <button onclick="rateHorror()">💀 قيّم رعب الفيلم</button>
-    <button onclick="reveal()">🩸 عطِني عن الفيلم</button>
-    <button onclick="supportCreator()">❤️ ادعم صانع الفيلم</button>
+    <button onclick="shareOnX()">🧛‍♂️ شارك على X (تويتر سابقًا)</button>
+    <button onclick="alert('شكراً على تقييمك!')">🩸 قيّم رعب الفيلم</button>
+    <button onclick="alert('الفيلم مستوحى من أحداث نفسية مرعبة 🎬')">🩸 عطني عن الفيلم</button>
+    <button onclick="alert('تم ❤️ شكراً لدعمك!')">❤️ ادعم صانع الفيلم</button>
   </div>
-  <p class="counter">👁️ عدد الزوار: <span id="visit-count">0</span></p>
-  <p class="love">🖤  دعمنا بحبك  </p>
+  <div class="footer">
+    👁️ عدد الزوار: <span id="counter">17</span><br />
+    ❤️ عاصم يحب أليتا
+  </div>
   <script>
-    let count = localStorage.getItem('visits') || 0;
-    count++;
-    localStorage.setItem('visits', count);
-    document.getElementById('visit-count').innerText = count;
-
     function shareOnFacebook() {
-      window.open('https://www.facebook.com/sharer/sharer.php?u=https://youtu.be/oa9dihhaUFs', '_blank');
+      const url = encodeURIComponent(window.location.href);
+      const text = encodeURIComponent("شاهد فيلم العاشرة 🎬 فيلم رعب يعطيك إحساس مختلف! #العاشرة https://youtu.be/oa9dihhaUFs");
+      window.open("https://www.facebook.com/sharer/sharer.php?u=" + url + "&quote=" + text, "_blank");
     }
-
     function shareOnX() {
-      const tweetText = encodeURIComponent('شاهد فيلم العاشرة 🎥 فيلم رعب مختلف يعطيك إحساس ما يُنسى! #العاشرة https://youtu.be/oa9dihhaUFs');
-      window.open(`https://twitter.com/intent/tweet?text=${tweetText}`, '_blank');
-    }
-
-    function rateHorror() {
-      alert('شكراً لتقييمك! تم تسجيل رعبك 🩸');
-    }
-
-    function reveal() {
-      alert('فيلم العاشرة مستوحى من أحداث نفسية مرعبة قد تحدث لأي شخص... حتى أنت.');
-    }
-
-    function supportCreator() {
-      window.open('https://instagram.com/asem.almoshrea', '_blank');
+      const text = encodeURIComponent("شاهد فيلم العاشرة 🎬 فيلم رعب يعطيك إحساس مختلف! #العاشرة https://youtu.be/oa9dihhaUFs");
+      window.open("https://twitter.com/intent/tweet?text=" + text, "_blank");
     }
   </script>
 </body>
