--- a/index.html
+++ b/index.html
@@ -1,38 +1,55 @@
-
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>THE TENTH</title>
+  <title>فيلم الرعب: THETENTH</title>
   <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <h1>📽️ فيلم الرعب: <span style="color:red">THETENTH</span></h1>
-  <div class="video-container">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/oa9dihhaUFs" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-  </div>
-  <div class="buttons">
-    <button onclick="shareOnFacebook()">👻 شارك الرعب على فيسبوك</button>
-    <button onclick="shareOnX()">🧛‍♂️ شارك على X (تويتر سابقًا)</button>
-    <button onclick="alert('شكراً على تقييمك!')">🩸 قيّم رعب الفيلم</button>
-    <button onclick="alert('الفيلم مستوحى من أحداث نفسية مرعبة 🎬')">🩸 عطني عن الفيلم</button>
-    <button onclick="alert('تم ❤️ شكراً لدعمك!')">❤️ ادعم صانع الفيلم</button>
-  </div>
-  <div class="footer">
-    👁️ عدد الزوار: <span id="counter">17</span><br />
-    ❤️ عاصم يحب أليتا
-  </div>
   <script>
     function shareOnFacebook() {
-      const url = encodeURIComponent(window.location.href);
-      const text = encodeURIComponent("شاهد فيلم العاشرة 🎬 فيلم رعب يعطيك إحساس مختلف! #العاشرة https://youtu.be/oa9dihhaUFs");
-      window.open("https://www.facebook.com/sharer/sharer.php?u=" + url + "&quote=" + text, "_blank");
+      const text = encodeURIComponent("شاهد فيلم العاشرة 🎬 فيلم يعطيك إحساس مختلف! #العاشرة");
+      const url = encodeURIComponent("https://youtu.be/oa9dihhaUFs");
+      const facebookUrl = `https://www.facebook.com/sharer/sharer.php?u=${url}&quote=${text}`;
+      window.open(facebookUrl, "_blank");
     }
+
     function shareOnX() {
-      const text = encodeURIComponent("شاهد فيلم العاشرة 🎬 فيلم رعب يعطيك إحساس مختلف! #العاشرة https://youtu.be/oa9dihhaUFs");
-      window.open("https://twitter.com/intent/tweet?text=" + text, "_blank");
+      const text = encodeURIComponent("شاهد فيلم العاشرة 🎬 فيلم يعطيك إحساس مختلف! #العاشرة");
+      const url = encodeURIComponent("https://youtu.be/oa9dihhaUFs");
+      const xUrl = `https://twitter.com/intent/tweet?text=${text}&url=${url}`;
+      window.open(xUrl, "_blank");
+    }
+
+    function supportCreator() {
+      alert("شكرًا لدعمك لصانع الفيلم! ❤️");
+    }
+
+    function rateHorror() {
+      alert("تم تسجيل تقييمك! 🩸");
+    }
+
+    function screamAboutIt() {
+      alert("صرخة رعب أُطلقت! 😱");
     }
   </script>
+</head>
+<body>
+  <div class="container">
+    <h1>🎬 <span style="color:red">فيلم الرعب:</span> <span style="color:#ff0000">THETENTH</span></h1>
+
+    <div class="video">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/oa9dihhaUFs" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+    </div>
+
+    <div class="buttons">
+      <button onclick="shareOnFacebook()">👻 شارك الرعب على فيسبوك</button>
+      <button onclick="shareOnX()">🩸 شارك على X (تويتر سابقًا)</button>
+      <button onclick="rateHorror()">🩸 قيّم رعب الفيلم</button>
+      <button onclick="screamAboutIt()">🧟‍♂️ صرّخ عن الفيلم</button>
+      <button onclick="supportCreator()">❤️ ادعم صانع الفيلم</button>
+    </div>
+
+    <p class="footer">👁️‍🗨️ عدد الزوار: <span id="visitor-count">0</span><br />❤️ عاصم يحب اليتا</p>
+  </div>
 </body>
 </html>
