--- a/index.html
+++ b/index.html
@@ -2,31 +2,28 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>THE TENTH - فيلم العاشرة</title>
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>فيلم العاشرة - THE TENTH</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="container">
-        <h1>🎬 THE TENTH - فيلم العاشرة</h1>
-        <p class="description">فيلم رعب قصير... يطرح تساؤلات نفسية واجتماعية في قالب مرعب</p>
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/oa9dihhaUFs" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="buttons">
-            <a href="https://buymeacoffee.com/asem.almoshrea" class="button support">❤️ ادعم صانع الفيلم</a>
-            <a href="https://www.instagram.com/asem.almoshrea/" class="button follow">📸 تابع المخرج</a>
-            <a href="https://x.com/intent/tweet?text=شاهد+فيلم+العاشرة+الآن+https://youtu.be/oa9dihhaUFs" class="button share">💀 شارك على X</a>
-            <a href="https://www.facebook.com/sharer/sharer.php?u=https://youtu.be/oa9dihhaUFs" class="button share">👻 شارك على فيسبوك</a>
-        </div>
-        <div class="disclaimer">
-            <input type="checkbox" id="disclaimerCheck">
-            <label for="disclaimerCheck" onclick="alert('إخلاء المسؤولية: الدعم في هذه الصفحة هو دعم طوعي للفن والمحتوى المرئي، وليس مقابل سلعة أو خدمة.')">
-                إخلاء مسؤولية
-            </label>
-        </div>
+  <div class="container">
+    <h1>🎬 فيلم العاشرة - THE TENTH</h1>
+    <p>فيلم رعب قصير... يطرح تساؤلات نفسية واجتماعية في قالب مرعب</p>
+    <div class="video-wrapper">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/oa9dihhaUFs" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
     </div>
+    <div class="buttons">
+      <a href="https://buymeacoffee.com/asem.almoshrea" target="_blank">❤️ ادعم صانع الفيلم</a>
+      <a href="https://www.instagram.com/asem.almoshrea" target="_blank">📸 تابع المخرج</a>
+      <a href="https://x.com/intent/tweet?text=شاهد+فيلم+العاشرة+المرعب!&url=https://asemalmoshr3.github.io/THETENTH/" target="_blank">☠️ شارك على X (تويتر سابقاً)</a>
+      <a href="https://www.facebook.com/sharer/sharer.php?u=https://asemalmoshr3.github.io/THETENTH/" target="_blank">👻 شارك الرعب على فيسبوك</a>
+    </div>
+    <div class="disclaimer">
+      <input type="checkbox" id="disclaimer-check" />
+      <label for="disclaimer-check"><a href="#" onclick="alert('إخلاء مسؤولية: الدعم في هذه الصفحة هو دعم طوعي للفن والمحتوى، وليس مقابل سلعة أو خدمة.'); return false;">إخلاء مسؤولية</a></label>
+    </div>
+  </div>
 </body>
 </html>
-    
