--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
 
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>فيلم العاشرة - THE TENTH</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>THE TENTH - فيلم العاشرة</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>🎬 فيلم العاشرة - THE TENTH</h1>
+    <h1>🎬 <span class="red">THE TENTH</span> - فيلم العاشرة</h1>
     <p>فيلم رعب قصير... يطرح تساؤلات نفسية واجتماعية في قالب مرعب</p>
-    <div class="video-wrapper">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/oa9dihhaUFs" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+    <div class="video">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/oa9dihhaUFs" 
+        title="YouTube video player" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="buttons">
       <a href="https://buymeacoffee.com/asem.almoshrea" target="_blank">❤️ ادعم صانع الفيلم</a>
-      <a href="https://www.instagram.com/asem.almoshrea" target="_blank">📸 تابع المخرج</a>
-      <a href="https://x.com/intent/tweet?text=شاهد+فيلم+العاشرة+المرعب!&url=https://asemalmoshr3.github.io/THETENTH/" target="_blank">☠️ شارك على X (تويتر سابقاً)</a>
-      <a href="https://www.facebook.com/sharer/sharer.php?u=https://asemalmoshr3.github.io/THETENTH/" target="_blank">👻 شارك الرعب على فيسبوك</a>
+      <a href="https://instagram.com/asem.almoshrea" target="_blank">📸 تابع المخرج</a>
+      <a href="https://x.com/intent/tweet?text=شاهد+فيلم+العاشرة+الآن+🎬&url=https://www.youtube.com/watch?v=oa9dihhaUFs" target="_blank">☠️ شارك على X (تويتر سابقًا)</a>
+      <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.youtube.com/watch?v=oa9dihhaUFs" target="_blank">👻 شارك الرعب على فيسبوك</a>
     </div>
     <div class="disclaimer">
-      <input type="checkbox" id="disclaimer-check" />
-      <label for="disclaimer-check"><a href="#" onclick="alert('إخلاء مسؤولية: الدعم في هذه الصفحة هو دعم طوعي للفن والمحتوى، وليس مقابل سلعة أو خدمة.'); return false;">إخلاء مسؤولية</a></label>
+      <input type="checkbox" id="disclaimerToggle">
+      <label for="disclaimerToggle">إخلاء مسؤولية</label>
+      <p id="disclaimerText">⚠️ الدعم في هذه الصفحة هو دعم طوعي للفن والمحتوى المرئي، وليس مقابل سلعة أو خدمة.</p>
     </div>
   </div>
 </body>
