--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>THE TENTH - فيلم العاشرة</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+  <!-- OG image for link preview -->
+<meta property="og:title" content="THE TENTH - فيلم العاشرة 🎬">
+<meta property="og:description" content="فيلم رعب قصير... يطرح تساؤلات نفسية واجتماعية في قالب مرعب">
+<meta property="og:image" content="https://asemalmoshr3.github.io/THETENTH/مو%20كل%20اللي%20جنبك%20بشر.jpg">
+<meta property="og:url" content="https://asemalmoshr3.github.io/THETENTH/">
+<meta property="og:type" content="website">
+</head>
+
 <body>
   <div class="container">
     <h1>🎬 <span class="red">THE TENTH</span> - فيلم العاشرة</h1>
