--- a/index.html
+++ b/index.html
@@ -1,39 +1,68 @@
-
 <!DOCTYPE html>
 <html lang="ar">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>THE TENTH - فيلم العاشرة</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-  <!-- OG image for link preview -->
-<meta property="og:title" content="THE TENTH - فيلم العاشرة 🎬">
-<meta property="og:description" content="فيلم رعب قصير... يطرح تساؤلات نفسية واجتماعية في قالب مرعب">
-<meta property="og:image" content="https://asemalmoshr3.github.io/THETENTH/مو%20كل%20اللي%20جنبك%20بشر.jpg">
-<meta property="og:url" content="https://asemalmoshr3.github.io/THETENTH/">
-<meta property="og:type" content="website">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>THE TENTH - فيلم العاشرة 🎬</title>
+
+  <!-- OG Tags for social media preview -->
+  <meta property="og:title" content="THE TENTH - فيلم العاشرة 🎬">
+  <meta property="og:description" content="فيلم رعب قصير... يطرح تساؤلات نفسية واجتماعية في قالب مرعب">
+  <meta property="og:image" content="https://asemalmoshr3.github.io/THETENTH/%D9%85%D9%88%20%D9%83%D9%84%20%D8%A7%D9%84%D9%84%D9%8A%20%D8%AC%D9%86%D8%A8%D9%83%20%D8%A8%D8%B4%D8%B1.jpg">
+  <meta property="og:url" content="https://asemalmoshr3.github.io/THETENTH/">
+  <meta property="og:type" content="website">
+
+  <style>
+    body {
+      background-color: #1e1e1e;
+      color: white;
+      text-align: center;
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      background-color: #2f2f2f;
+      margin: 50px auto;
+      padding: 20px;
+      border-radius: 10px;
+      width: 90%;
+      max-width: 700px;
+    }
+    iframe {
+      width: 100%;
+      height: 400px;
+      border: none;
+      border-radius: 10px;
+    }
+    .links {
+      margin-top: 20px;
+    }
+    a {
+      color: #ffcc00;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+  </style>
 </head>
 
 <body>
   <div class="container">
-    <h1>🎬 <span class="red">THE TENTH</span> - فيلم العاشرة</h1>
+    <h1 style="color: red;">THE TENTH - فيلم العاشرة 🎬</h1>
     <p>فيلم رعب قصير... يطرح تساؤلات نفسية واجتماعية في قالب مرعب</p>
-    <div class="video">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/oa9dihhaUFs" 
-        title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <div class="buttons">
+    <iframe src="https://www.youtube.com/embed/oa9dihhaUFs" allowfullscreen></iframe>
+    <div class="links">
       <a href="https://buymeacoffee.com/asem.almoshrea" target="_blank">❤️ ادعم صانع الفيلم</a>
-      <a href="https://instagram.com/asem.almoshrea" target="_blank">📸 تابع المخرج</a>
-      <a href="https://x.com/intent/tweet?text=شاهد+فيلم+العاشرة+الآن+🎬&url=https://www.youtube.com/watch?v=oa9dihhaUFs" target="_blank">☠️ شارك على X (تويتر سابقًا)</a>
-      <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.youtube.com/watch?v=oa9dihhaUFs" target="_blank">👻 شارك الرعب على فيسبوك</a>
+      <a href="https://www.instagram.com/asem.almoshrea/" target="_blank">📸 تابع المخرج</a>
+      <a href="https://twitter.com/intent/tweet?url=https://asemalmoshr3.github.io/THETENTH/&text=شاهد+فيلم+العاشرة+الآن+🔥" target="_blank">💀 شارك على X</a>
+      <a href="https://www.facebook.com/sharer/sharer.php?u=https://asemalmoshr3.github.io/THETENTH/" target="_blank">👻 شارك الرعب على فيسبوك</a>
     </div>
-    <div class="disclaimer">
-      <input type="checkbox" id="disclaimerToggle">
-      <label for="disclaimerToggle">إخلاء مسؤولية</label>
-      <p id="disclaimerText">⚠️ الدعم في هذه الصفحة هو دعم طوعي للفن والمحتوى المرئي، وليس مقابل سلعة أو خدمة.</p>
+    <div style="margin-top: 20px;">
+      <label><input type="checkbox"> إخلاء مسؤولية</label>
+      <p style="font-size: 12px; color: gray;">الدعم في هذه الصفحة هو دعم طوعي للفن والمحتوى البصري، وليس مقابل سلعة أو خدمة.</p>
     </div>
   </div>
 </body>
+
 </html>
