--- a/index.html
+++ b/index.html
@@ -1,38 +1,90 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>THE TENTH</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="THE TENTH - فيلم العاشرة">
+  <meta property="og:description" content="فيلم رعب قصير يطرح تساؤلات نفسية واجتماعية في قالب مرعب.">
+  <meta property="og:image" content="مو كل اللي جنبك بشر.jpg">
+  <meta property="og:url" content="https://asemalmoshr3.github.io/THETENTH/">
+  <title>فيلم العاشرة - THE TENTH</title>
+  <style>
+    body {
+      background: url('halloween-6880.gif') no-repeat center center fixed;
+      background-size: cover;
+      font-family: 'Arial', sans-serif;
+      color: white;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      background-color: rgba(0, 0, 0, 0.75);
+      margin: 3em auto;
+      padding: 2em;
+      border-radius: 15px;
+      width: 90%;
+      max-width: 720px;
+    }
+    h1 {
+      color: #ff3333;
+      margin-bottom: 0;
+    }
+    .desc {
+      font-size: 14px;
+      color: #ddd;
+    }
+    iframe {
+      width: 100%;
+      height: 360px;
+      border-radius: 10px;
+      margin-top: 1em;
+    }
+    .buttons {
+      margin-top: 1.5em;
+    }
+    .buttons a {
+      display: inline-block;
+      background-color: #444;
+      color: #ffcc00;
+      padding: 10px 18px;
+      margin: 8px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+    .buttons a:hover {
+      background-color: #666;
+    }
+    .checkbox {
+      margin-top: 1.5em;
+      color: #ccc;
+      font-size: 14px;
+    }
+    .checkbox input {
+      transform: scale(1.3);
+      margin-left: 5px;
+    }
+  </style>
 </head>
 <body>
-  <h1>📽️ فيلم الرعب: <span style="color:red">THETENTH</span></h1>
-  <div class="video-container">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/oa9dihhaUFs" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+  <div class="container">
+    <h1>THE TENTH - <span style="color:#f33">فيلم العاشرة</span> 🎬</h1>
+    <p class="desc">فيلم رعب قصير... يطرح تساؤلات نفسية واجتماعية في قالب مرعب</p>
+    <iframe src="https://www.youtube.com/embed/oa9dihhaUFs" frameborder="0" allowfullscreen></iframe>
+    <div class="buttons">
+      <a href="https://buymeacoffee.com/asem.almoshrea" target="_blank">❤️ ادعم صانع الفيلم</a>
+      <a href="https://www.instagram.com/asem.almoshrea" target="_blank">📸 تابع المخرج</a>
+      <a href="https://www.facebook.com/sharer/sharer.php?u=https://asemalmoshr3.github.io/THETENTH/" target="_blank">👻 شارك على فيسبوك</a>
+      <a href="https://x.com/intent/tweet?url=https://asemalmoshr3.github.io/THETENTH/&text=شاهد+فيلم+العاشرة+الآن" target="_blank">☠️ غرد على X</a>
+    </div>
+    <div class="checkbox">
+      <label>
+        <input type="checkbox" onclick="alert('الدعم في هذه الصفحة هو دعم طوعي للفن والمحتوى البصري، وليس مقابل سلعة أو خدمة.')" checked>
+        إخلاء مسؤولية
+      </label>
+    </div>
   </div>
-  <div class="buttons">
-    <button onclick="shareOnFacebook()">👻 شارك الرعب على فيسبوك</button>
-    <button onclick="shareOnX()">🧛‍♂️ شارك على X (تويتر سابقًا)</button>
-    <button onclick="alert('شكراً على تقييمك!')">🩸 قيّم رعب الفيلم</button>
-    <button onclick="alert('الفيلم مستوحى من أحداث نفسية مرعبة 🎬')">🩸 عطني عن الفيلم</button>
-    <button onclick="alert('تم ❤️ شكراً لدعمك!')">❤️ ادعم صانع الفيلم</button>
-  </div>
-  <div class="footer">
-    👁️ عدد الزوار: <span id="counter">17</span><br />
-    ❤️ عاصم يحب أليتا
-  </div>
-  <script>
-    function shareOnFacebook() {
-      const url = encodeURIComponent(window.location.href);
-      const text = encodeURIComponent("شاهد فيلم العاشرة 🎬 فيلم رعب يعطيك إحساس مختلف! #العاشرة https://youtu.be/oa9dihhaUFs");
-      window.open("https://www.facebook.com/sharer/sharer.php?u=" + url + "&quote=" + text, "_blank");
-    }
-    function shareOnX() {
-      const text = encodeURIComponent("شاهد فيلم العاشرة 🎬 فيلم رعب يعطيك إحساس مختلف! #العاشرة https://youtu.be/oa9dihhaUFs");
-      window.open("https://twitter.com/intent/tweet?text=" + text, "_blank");
-    }
-  </script>
 </body>
 </html>
