--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
     }
   </style>
 </head>
+  <!-- Favicon for THE TENTH -->
+<link rel="icon" type="image/png" href="favicon.png">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+
 <body>
   <div class="container">
     <h1>
