--- a/index.html
+++ b/index.html
@@ -4,29 +4,51 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="فيلم العاشرة - THE TENTH: فيلم رعب قصير يطرح تساؤلات نفسية واجتماعية في قالب مرعب." />
+
+  <!-- معاينة واتساب ووسائل التواصل -->
   <meta property="og:image" content="مو%20كل%20اللي%20جنبك%20بشر.jpg" />
+  <meta property="og:title" content="فيلم العاشرة - THE TENTH" />
+  <meta property="og:description" content="فيلم رعب سعودي يعبث بعقلك ويدخلك عالمًا نفسيًا مرعبًا." />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image" content="مو%20كل%20اللي%20جنبك%20بشر.jpg" />
+
+  <!-- أيقونة التبويب -->
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
   <title>فيلم العاشرة - THE TENTH</title>
-  <link rel="stylesheet" href="style.css" />
+
   <style>
     body {
       background-image: url('halloween-6880.gif');
       background-size: cover;
       background-attachment: fixed;
+      background-repeat: no-repeat;
       font-family: 'Arial', sans-serif;
       text-align: center;
       padding: 20px;
       color: white;
     }
+
     .container {
       background: rgba(0, 0, 0, 0.7);
       padding: 20px;
       border-radius: 10px;
       display: inline-block;
     }
+
     h1 {
       color: #ff0033;
       text-shadow: 0 0 8px black;
     }
+
+    iframe {
+      border: 4px solid red;
+      border-radius: 10px;
+      box-shadow: 0 0 15px red;
+      margin: 15px 0;
+    }
+
     button {
       background-color: gold;
       border: none;
@@ -37,9 +59,11 @@
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
+
     button:hover {
       background-color: darkorange;
     }
+
     .disclaimer {
       margin-top: 10px;
       font-size: 12px;
@@ -47,18 +71,13 @@
     }
   </style>
 </head>
-  <!-- Favicon for THE TENTH -->
-<link rel="icon" type="image/png" href="favicon.png">
-<link rel="icon" type="image/x-icon" href="favicon.ico">
 
 <body>
   <div class="container">
-    <h1>
-      🎬 فيلم الرعب: <span style="color:white">THETENTH</span>
-    </h1>
+    <h1>🎬 فيلم الرعب: <span style="color:white">THETENTH</span></h1>
     <p>فيلم رعب قصير... يطرح تساؤلات نفسية واجتماعية في قالب مرعب</p>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/oa9dihhaUFs" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/oa9dihhaUFs" title="YouTube video player" allowfullscreen></iframe>
 
     <div>
       <button onclick="window.open('https://buymeacoffee.com/asem.almoshrea')">❤️ ادعم صانع الفيلم</button>
