--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <title>فيلم العاشرة - THE TENTH</title>
+body {
+  background-image: url('halloween-6880.gif');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  font-family: 'Arial', sans-serif;
+  text-align: center;
+  padding: 20px;
+  color: white;
+}
 
   <style>
     body {
