--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- تنسيقات الصفحة -->
   <style>
     body {
-      background-image: url('halloween-6880.gif');
+      background-image: url('bg/halloween-6880.gif');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
