--- a/index.html
+++ b/index.html
@@ -36,17 +36,22 @@
       padding: 20px;
       border-radius: 10px;
       display: inline-block;
+      max-width: 100%;
     }
 
     h1 {
       color: #ff0033;
       text-shadow: 0 0 8px black;
+      font-size: 1.8em;
     }
 
     iframe {
+      width: 100%;
+      max-width: 560px;
+      aspect-ratio: 16 / 9;
       border: 4px solid red;
       border-radius: 10px;
-      box-shadow: 0 0 15px red;
+      box-shadow: 0 0 10px red;
       margin: 15px 0;
     }
 
@@ -54,9 +59,10 @@
       background-color: gold;
       border: none;
       border-radius: 5px;
-      padding: 10px 15px;
-      margin: 5px;
+      padding: 12px 18px;
+      margin: 6px;
       font-weight: bold;
+      font-size: 1em;
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
@@ -67,7 +73,7 @@
 
     .disclaimer {
       margin-top: 10px;
-      font-size: 12px;
+      font-size: 13px;
       color: #ccc;
     }
   </style>
@@ -78,12 +84,12 @@
     <h1>🎬 فيلم الرعب: <span style="color:white">THETENTH</span></h1>
     <p>فيلم رعب قصير... يطرح تساؤلات نفسية واجتماعية في قالب مرعب</p>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/oa9dihhaUFs" title="YouTube video player" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/oa9dihhaUFs" title="YouTube video player" allowfullscreen></iframe>
 
     <div>
       <button onclick="window.open('https://buymeacoffee.com/asem.almoshrea')">❤️ ادعم صانع الفيلم</button>
       <button onclick="alert('الفيلم يحكي عن رجل يواجه كوابيسه الحقيقية...')">🔥 احكِ لي عن الفيلم</button>
-      <button onclick="alert('شكرا لك  ')">🔥 قيّم رعب الفيلم</button>
+      <button onclick="alert('كم تقييمك من 10؟')">🔥 قيّم رعب الفيلم</button>
       <button onclick="window.open('https://x.com/intent/tweet?text=شاهدوا+فيلم+العاشرة+المرعب!+https://asemalmoshr3.github.io/THETENTH/')">👻 شارك على X (تويتر سابقًا)</button>
       <button onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://asemalmoshr3.github.io/THETENTH/')">👻 شارك الرعب على فيسبوك</button>
       <button onclick="window.open('https://instagram.com/asem.almoshrea')">📸 تابع المخرج</button>
