--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div>
       <button onclick="window.open('https://buymeacoffee.com/asem.almoshrea')">❤️ ادعم صانع الفيلم</button>
       <button onclick="alert('الفيلم يحكي عن رجل يواجه كوابيسه الحقيقية...')">🔥 احكِ لي عن الفيلم</button>
-      <button onclick="alert('كم تقييمك من 10؟')">🔥 قيّم رعب الفيلم</button>
+      <button onclick="alert('شكرا لك على تقييمك ودعمك ؟')">🔥 قيّم رعب الفيلم</button>
       <button onclick="window.open('https://x.com/intent/tweet?text=شاهدوا+فيلم+العاشرة+المرعب!+https://asemalmoshr3.github.io/THETENTH/')">👻 شارك على X (تويتر سابقًا)</button>
       <button onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://asemalmoshr3.github.io/THETENTH/')">👻 شارك الرعب على فيسبوك</button>
       <button onclick="window.open('https://instagram.com/asem.almoshrea')">📸 تابع المخرج</button>
