--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
       aspect-ratio: 16 / 9;
       border: none;
       border-radius: 20px;
-      box-shadow: 0 0 35px rgba(255, 0, 0, 0.3);
+      box-shadow:
+        0 0 25px rgba(255, 0, 0, 0.35),
+        0 0 50px rgba(255, 0, 0, 0.25),
+        0 0 90px rgba(255, 0, 0, 0.15);
       margin: 15px 0;
+      transition: box-shadow 0.4s ease-in-out;
     }
 
     button {
@@ -89,7 +93,7 @@
     <div>
       <button onclick="window.open('https://buymeacoffee.com/asem.almoshrea')">❤️ ادعم صانع الفيلم</button>
       <button onclick="alert('الفيلم يحكي عن رجل يواجه كوابيسه الحقيقية...')">🔥 احكِ لي عن الفيلم</button>
-      <button onclick="alert('كم تقييمك من 10؟')">🔥 قيّم رعب الفيلم</button>
+      <button onclick="alert('شكرا على دعمك وتقييمك ')">🔥 قيّم رعب الفيلم</button>
       <button onclick="window.open('https://x.com/intent/tweet?text=شاهدوا+فيلم+العاشرة+المرعب!+https://asemalmoshr3.github.io/THETENTH/')">👻 شارك على X (تويتر سابقًا)</button>
       <button onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://asemalmoshr3.github.io/THETENTH/')">👻 شارك الرعب على فيسبوك</button>
       <button onclick="window.open('https://instagram.com/asem.almoshrea')">📸 تابع المخرج</button>
